# snicket_compiler

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs  distributed_filter.rs.handlebars  envoy_filter.rs.handlebars  filter.cc  filter.cc.handlebars  filter.cc.hbars  filter.rs.handlebars  filter_types.rs.handlebars  setup.sh  simulation_filter.rs.handlebars
.github/workflows/: cpp_filter.yml  rust.yml
aggregation_filter_envoy/: aggregation_filter.rs
cpp_filter/: .gitignore  BUILD  WORKSPACE  bazel-wasm  debug_filter.cc  filter.cc  filter_test.cc  graph_utils.cc  graph_utils_test.cc  productpage-cluster.yaml  str_utils.cc  str_utils.h  str_utils_test.cc
cpp_filter/toolchain/: BUILD  cc_toolchain_config.bzl
deployment/: bookinfo.sh  filter-details-v1.yaml  filter-productpage-v1.yaml  filter-ratings-v1.yaml  filter-reviews-v1.yaml  filter-reviews-v2.yaml  filter-reviews-v3.yaml
distributed_filter_envoy/: .gitignore  Cargo.toml  filter_base.rs  main.rs
distributed_filter_envoy/agg/: .gitignore  Cargo.toml  lib.rs
env/: .gitignore  kube_env.py  query_storage.py  run_experiment.py  send_request.py  util.py
env/yaml_crds/: bookinfo-mod-filter.yaml  bookinfo-mod.yaml  fault-injection.yaml  filter.yaml  istio-config.yaml  productpage-cluster.yaml  prometheus-mod.yaml  storage-upstream.yaml  ttcsagent.yaml
example_queries/: .gitignore  README.md  breadth.cc  breadth.cc.ref  breadth.cql  breadth.rs.ref  breadth_histogram.cc  breadth_histogram.cc.ref  breadth_histogram.cql  breadth_histogram_filter.cc  breadth_histogram_rust.cql  call_udf.cc  call_udf.cql  connection_id.cql  count.cc  count.cc.ref  count.cql  count.rs.ref  count_filter.cc  count_rust.cql  get_service_name.cql  get_service_name.rs.ref  group_by.cc  group_by.cql  height.cql  height.rs.ref  height_avg.cql  height_histogram.cc  height_histogram.cc.ref  height_histogram.cql  height_histogram.rs.ref  height_histogram_filter.cc  height_histogram_rust.cql  histogram.cql  join.cql  request_count.cc  request_count.cql  request_size.cql  request_size.rs.ref  request_size_avg.cql  (+27 more)
example_queries/breadth/: filter.cc
example_queries/call_udf/: README.md  filter.cc  max_response_size.cc  query.cql
example_queries/count/: filter.cc
example_queries/envoy/: get_service_name.rs.ref  height.rs.ref  height_avg.rs.ref  request_size.rs.ref  request_size_avg.rs.ref  request_size_avg_trace_attr.rs.ref  request_time.rs.ref
example_queries/group_by/: README.md  avg.cc  count.cc  filter.cc  filter_avg.cc  filter_historgram.cc  histogram.cc  query.cql
example_queries/height/: filter.cc  filter_histogram.cc  histogram.cc  query_histogram.cql
example_queries/old/: breadth.cc  breadth.cc.ref  breadth_histogram.cc  breadth_histogram.cc.ref  breadth_histogram.rs.ref  count.cc  count.cc.ref  count.cql  height_histogram.cc  height_histogram.cc.ref  response_code_count.cc  response_code_count.cc.ref  response_code_count.cql  response_code_count.rs.ref  response_size_avg.cc  response_size_avg.cc.ref  response_size_avg.rs.ref  response_size_histogram.cql  return.cc  return.cc.ref  return.cql  return_height.cc  return_height.cc.ref  return_height.rs.ref
example_queries/return/: README.md  filter.cc  query.cql
example_queries/sim/: get_service_name.rs.ref  height.rs.ref  height_avg.rs.ref  request_size.rs.ref  request_size_avg.rs.ref  request_size_avg_trace_attr.rs.ref  request_time.rs.ref  return_trace.rs.ref
example_udfs/: avg.rs  count.cc  count.rs  height.rs
example_udfs/old/: count.rs  histogram.rs
examples/: enum.rs  enum_template.handlebars
filter_envoy/: .gitignore  build.sh  filter_base.rs
filter_sim/: Cargo.toml
latency_monitoring/: .gitattributes  .gitignore  README.MD  build_patched_wasme.sh  fault_testing.py  install_deps.sh  make_graph.py  no_sync_mult_region.csv  no_sync_single_region.csv  productpage-cluster.yaml  sync_mult_region.csv  sync_single_region.csv  useful_commands.sh  util.py
latency_monitoring/latency_monitor/: build_script.sh  filter.cc
latency_monitoring/message_counter/: .gitignore  WORKSPACE  bazel-bin  bazel-message_counter  bazel-out  bazel-testlogs  build_script.sh  filter.cc  runtime-config.json
latency_monitoring/parallel_curl/: .gitignore  Makefile
latency_monitoring/tools/: build_patched_wasme.sh  logs_script.sh
latency_monitoring/yaml_crds/: fault-injection.yaml  istio-config-gcp.yaml  istio-config.yaml  istio-route-config.yaml  prometheus-mod.yaml  storage-upstream.yaml  virtual-service-reviews-balance.yaml
libs/utils/: Cargo.toml  lib.rs
libs/utils/graph/: graph_utils.rs  iso.rs  mod.rs  serde.rs
libs/utils/misc/: headers.rs
queries_to_implement/breadth/: error.txt  query.cql
queries_to_implement/depth/: error.txt  query.cql
queries_to_implement/latency/: error.txt  query.cql
rewrite/: Cypher.g4  codegen.rs  codegen_common.rs  codegen_envoy.rs  codegen_simulator.rs  ir.rs  lib.rs  main.rs  parser.rs  to_ir.rs
rs_filter/: .gitignore  Cargo.toml  aggr_filter.rs  filter.rs  filter_base.rs  get_service_name.rs
rust_filter/: .gitignore  Cargo.toml
rust_filter/src/: filter.rs  graph_utils.rs  lib.rs  types.rs
src/: code_gen.rs  codegen_common.rs  codegen_envoy.rs  codegen_simulator.rs  def_use.rs  grammar.rs  graph.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty_printer.rs  property.rs  to_ir.rs  token.rs  tree_fold.rs
src/antlr_gen/: lexer.rs  listener.rs  (+2 more)
templates/: distributed_envoy_filter.rs.handlebars  distributed_filter.rs.handlebars  envoy_aggregation_filter.rs.handlebars  envoy_filter.rs.handlebars  envoy_filter_aggregation.rs.handlebars  simulation_filter.rs.handlebars  simulation_filter_aggregation.rs.handlebars  simulation_filter_distributed.rs.handlebars
tests/: query_tests.rs
tools/: setup.sh
wasm/: .gitignore  BUILD  README.md  WORKSPACE  dfs_example.cc  filter.cc  filter.proto  filter_test.cc  graph.proto  graph_utils.cc  graph_utils.h  graph_utils_test.cc  runtime-config.json  storage-upstream.yaml  str_utils.cc  str_utils.h  str_utils_test.cc  treenode.proto  treenode_util.cc  treenode_util.h
(+16 files in other folders)
