[package]
name = "dtc"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
handlebars = "3.1.0"
lazy_static = "1.4.0"
regex = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
strum = "0.19"
strum_macros = "0.19"

[dev-dependencies]
test-case = "1.1.0"
assert_cmd = "1.0.2"
predicates = "1.0.6"

[lib]
name = "dyntracing"
path = "src/lib.rs"

[[bin]]
name = "dtc"
path = "src/main.rs"
