[workspace]
modules = []

[package]
name = "rust_filter"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
path = "filter.rs"

[dependencies]
petgraph = {version =  "0.*", features = ["serde-1"] }
rpc_lib = { path = "../../tracing_sim/libs/rpc_lib" }
utils = { path = "../libs/utils" }
indexmap = { version = "1.6.1", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"
log4rs = "*"

[dependencies.serde_with]
version = "1.4.0"
