
[package]
name = "rs_filter"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

[lib]
name = "filter"
path = "get_service_name.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
proxy-wasm = { version = "0.1.*", features = ["wee_alloc"] }
indexmap = { version = "1.6.1", features = ["serde-1"] }
log = "*"
utils = { path = "../libs/utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

