[package]
name = "rust_lib"
version = "0.1.0"
authors = ["Jessica Berg <jb7399@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
petgraph = { path = "../petgraph" }
rpc_lib = { path = "../rpc_lib" }
