[workspace]
modules = []

[package]
name = "rust_filter"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
path = "filter.rs"

[dependencies]
petgraph = { path = "../petgraph" }
rpc_lib = { path = "../rpc_lib" }
graph_utils = { path = "../graph_utils" }
