[package]
name = "utils"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>", "Jessica Berg <jb7399@nyu.edu>", "Fabian Ruffy <fruffy@nyu.edu>"]
edition = "2018"

[lib]
crate-type = ["lib"]
path = "lib.rs"

[dependencies]
log = "*"
regex = "0.2.2"
mcmf = "2.0.0"
indexmap = { version = "1.6.1", features = ["serde-1"] }
petgraph = {version =  "0.*", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

